# CyClaw

./: .codacy.yml  .dockerignore  .gitignore  .gitleaksignore  .osv-scanner.toml  AGENTS.md  CLAUDE.md  DEPENDENCY_CURRENCY_PLAN.md  Dockerfile  Dropbox_Sync_Guide.md  INVARIANTS.md  LangChainFix.md  LangchainDeepAgent.md  LangchainIntegrationPlan.md  OLLAMA_SETUP.md  PR_TEST_AUDIT_DETAILED.md  PsyClaw_Security_Audit.md  README.md  REQUIREMENTS_AUDIT.md  SECURITY.md  SESSION_NOTES.md  SETUP.md  SafeClaw-oldOG-diagram.md  ZIZMOR_FINDINGS_PLAN.md  changelog.txt  config.yaml  constraints.txt  cyclaw_telemetry_kill.env  docker-compose.patch  docker-compose.yml  environment.yml  future_Langchain_plans.md  gate.py  gate_ops.py  graph.py  mcp_hybrid_server.py  metrics.py  old.md  package.json  psyclaw_suggestions_fix.md  (+15 more)
.GitHub/workflows/: environment.yml
.agents/: README.md
.claude/: CyClaw-Optimizer-Readme.md  Financial_Planning.md  README.md  ponytail-marketplace.json  sandbox-test.txt  settings.json
.claude/commands/: CyClaw-Optimize.md  CyClaw-Sandbox.md  add-comment.md  architecture-refactor.md  audit.md  check-soul.md  code-explorer.md  conversation-summary.md  create-session-notes.md  cyclaw-advisor.md  doc-sync.md  documentation-guide.md  fable-protocol.md  general-purpose.md  index-doctor.md  injection-redteam.md  invariant-guard.md  karpathy-guidelines.md  logging-refactor.md  memory-consolidation.md  memory-extraction.md  memory-orchestrator.md  next-action-suggestion.md  ponytail.md  python-coding-agent.md  run-cyclaw.md  run.md  sandbox-runtime-verification.md  session-title.md  solution-architect.md  speed-refactor.md  status.md  tests-refactor.md  tool-summary.md  verification-specialist.md  verify-deps.md  wrap-up.md
.claude/hooks/: session-start-sync-check.sh
.claude/memory/: .gitkeep
.claude/rules/: PROJECT_RULES.md
.claude/session-notes/: terminal-sync-agentic-2026-06-23.md
.claude/utility-prompts/: coordinator-prompt.md  next-action-suggestion.md  session-title.md  tool-summary.md
.codex/: README.md  codex_custom_instructions.md  instructions.md
.codex/checklists/: pre-commit.md  pre-pr.md  regression-risk.md
.codex/prompts/: implementation-plan.md  issue-triage.md  pr-agent.md  pr-review.md  release-notes.md  review-diff.md
.codex/routines/: bugfix.md  feature.md  first-pass-repo-review.md  pr-review.md  refactor.md  security-review.md  test-and-verify.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  codacy.yml  codeql.ym  codeql.yml  codeql.ymll  codex-skills.yml  codex.yml  copilot-setup-steps.yml  defender-for-devops.yml  devskim.yml  environment.yml  fortify.yml  gitleaks.yml  lint.yml  osv-scanner.yml  pip-audit.yml  pr-review.yml  py-review.yml  python-package-conda.yml  python-publish.yml  security-gate.yml  semgrep.yml  trivy.yml
agentic/: README.md  __init__.py  cli.py  config.py  context.py  gh_client.py  registry.py  selftest.py  writer.py
agentic/deepagent_github/: __init__.py  builder.py  config.py  core.py  governance.py  memory.py  model_adapter.py  permissions.py  runners.py  skills.py  subagents.py  tools.py
agentic/fsconnect/: __init__.py  (+11 more)
deploy/: .gitkeep
docs/: !TERMINAL_UX_NEXT_STEPS.md  CODE_SECURITY_REVIEW_2026-06-16.md  CyClaw_Full_Audit_Report_2026-06-24.md  CyClaw_Full_Comprehensive_Audit_2026-06-24.md  DROPBOX_SYNC_IMPLEMENTATION_PLAN.md  GITHUB_CLAUDE_AUDIT.md  HARNESS_POWERSHELL.md  LG_Deep_Agentic_Harness_status_n_roadmap.md  LOCAL_REMOTE_SYNC_GUARD.md  LangChain_Deep_Agentic_Harness_latest_roadmap.md  Local_Sandbox_Complete_Audit_2026-06-24.md  Local_Sandbox_Complete_Audit_2026-06-30.md  Local_Sandbox_Complete_Audit_2026-07-04.md  PONYTAIL_PLUGIN.md  POSTGRES_BACKEND.md  PROPOSED_SKILLS.md  PSYCLAW_FEATURE_IDEAS.md  REVIEW_2026-06-20.md  SANDBOX_RUNTIME_VERIFICATION_2026-06-21.md  SECCOMP_EBPF_HARDENING.md  SECURITY_REVIEW_STATUS.md  SETUP.md  SYNC_README.md  TESTCLIENT_HTTPX_DEPRECATION.md  TEST_SUITE_ANALYSIS_2026-06-20.md  THREAT_MODEL.md  ZIZMOR_FINDINGS_PLAN.md  codex-findings-7202026.md  online-llm-grok-claude.md  optimization-round-cc.md  planning-622-626.md  ponytail-review-grok-api-key.md  ponytail-review-planning.md  sms_relay_setup.md
guardrails/: __init__.py  cli.py  config.py  errors.py  integration.py  metrics.py  rails.py  selftest.py
harness/: __init__.py  config.py  ollama.py  prompts.py  registry_view.py  schemas.py  server.py  sessions.py
llm/: client.py
powershell/: Install-CyClaw.ps1  Invoke-CyClaw.ps1  Uninstall-CyClaw.ps1
retrieval/: clear_cache.py  embeddings.py  hybrid_search.py  indexer.py  stemmer.py  vector_store.py
schemas/: api.py
screenshots/: extractor.html
static/: extractor.html  harness.html  terminal.html
sync/: __init__.py  cli.py  config.py  filters.py  runner.py  scheduler.py  selftest.py
tests/: TEST_SUITE_AUDIT.md  VERIFICATION_REPORT_3.12.md  apipsTest.ps1  ci_rag_smoke.py  cmd2index.bat  conftest.py  test_agentic_cli.py  test_agentic_config.py  test_agentic_context.py  test_agentic_deepagent_optional.py  test_agentic_gh_client.py  test_agentic_harness_optimizer.py  test_agentic_harness_phase345.py  test_agentic_harness_phase679.py  test_agentic_isolation.py  test_agentic_registry.py  test_agentic_selftest.py  test_agentic_writer.py  test_audit.py  test_clear_cache.py  test_client.py  test_config_validation.py  test_conftest_fixtures.py  test_cyclaw_sandbox_skill.py  test_due_diligence_invariants.py  test_edge_cases.py  test_embeddings.py  test_fsconnect_cli.py  test_fsconnect_client.py  test_fsconnect_config.py  test_fsconnect_indexer.py  test_fsconnect_osutil.py  test_fsconnect_pathsafe.py  test_fsconnect_quota.py  test_fsconnect_ratelimit.py  test_fsconnect_reindex.py  test_fsconnect_selftest.py  test_fsconnect_trash.py  test_fsconnect_trash_integrity.py  test_fsconnect_writer.py  (+45 more)
utils/: config_validation.py  errors.py  guardrail_bridge.py  health.py  logger.py  ops_runner.py  personality.py  personality_db.py  ratelimit.py  sanitizer.py  selftest.py
(+228 files in other folders)
