[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyclaw"
version = "1.9.0"
description = "Offline-first RAG server with graph-enforced security routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.44.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "chromadb==1.5.5",
    "sentence-transformers==5.4.0",
    "rank-bm25==0.2.2",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "numpy<2",
    "aiofiles==25.1.0",
    "langgraph==1.0.11",
    "langchain-core==1.3.4",
    "mcp==1.27.0",
]

[project.optional-dependencies]
guardrails = [
    "nemoguardrails==0.18.2",
]

[project.scripts]
cyclaw-server = "gate:main"
cyclaw-mcp = "mcp_hybrid_server:main"
cyclaw-index = "retrieval.indexer:main"
cyclaw-metrics = "metrics:main"
cyclaw-clear-cache = "retrieval.clear_cache:main"
cyclaw-harness = "harness.server:main"

[tool.hatch.build.targets.wheel]
packages = ["utils", "retrieval", "llm", "schemas", "sync", "agentic", "guardrails", "harness"]

[tool.hatch.build.targets.sdist]
include = [
    "gate.py", "gate_ops.py", "graph.py", "mcp_hybrid_server.py", "metrics.py",
    "config.yaml", "constraints.txt", "environment.yml", "utils", "retrieval",
    "llm", "schemas", "static", "data", "sync", "agentic", "guardrails", "harness", "powershell",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
branch = true
source = ["gate", "gate_ops", "graph", "mcp_hybrid_server", "metrics", "llm", "retrieval", "utils", "sync", "agentic", "guardrails", "harness"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["utils", "retrieval", "llm", "schemas", "sync", "agentic", "guardrails", "harness"]

[tool.mypy]
python_version = "3.12"
strict = true
