[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyclaw"
version = "1.9.0"
description = "Offline-first RAG server with graph-enforced security routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "chromadb==1.5.9",  # CVE-2026-45829 (Critical pre-auth RCE; no upstream patch). Risk accepted ONLY for local/offline air-gapped use via PersistentClient (embedded mode, path from config.yaml). No HttpClient, no trust_remote_code. See SECURITY.md + pip-audit workflow.
    "sentence-transformers==5.6.0",
    "rank-bm25==0.2.2",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "numpy<2",
    "aiofiles==25.1.0",
    "langgraph==1.2.6",
    "langchain-core==1.4.8",
    "mcp==1.28.1",
]

[project.optional-dependencies]
guardrails = [
    "nemoguardrails==0.18.2",
]

[project.scripts]
cyclaw-server = "gate:main"
cyclaw-mcp = "mcp_hybrid_server:main"
cyclaw-index = "retrieval.indexer:main"
cyclaw-metrics = "metrics:main"
cyclaw-clear-cache = "retrieval.clear_cache:main"
cyclaw-harness = "harness.server:main"

[tool.hatch.build.targets.wheel]
packages = ["utils", "retrieval", "llm", "schemas", "sync", "agentic", "guardrails", "harness"]

[tool.hatch.build.targets.sdist]
include = [
    "gate.py", "gate_ops.py", "graph.py", "mcp_hybrid_server.py", "metrics.py",
    "config.yaml", "constraints.txt", "environment.yml", "utils", "retrieval",
    "llm", "schemas", "static", "data", "sync", "agentic", "guardrails", "harness", "powershell",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["gate", "gate_ops", "graph", "mcp_hybrid_server", "metrics", "llm", "retrieval", "utils", "sync", "agentic", "guardrails"]
# fsconnect/sqlconnect have a POSIX-specific security core (openat/O_NOFOLLOW) whose
# Windows branch needs a separate Windows CI lane (deferred -- see
# docs/agentic/FSCONNECT_SQL_ROADMAP.md, FS Phase 4). Their tests run on Linux CI for
# correctness, but the per-OS coverage gate is unmeasurable on Windows (the POSIX
# paths skip there), so they are omitted from the coverage metric until that lane
# exists. Re-include them once Windows coverage is wired. "harness" is intentionally
# absent from source above: ci.yml has no matching --cov=harness flag (dep-guard D10).
omit = ["tests/*", "*/test_*", "*/__pycache__/*", "agentic/fsconnect/*", "agentic/sqlconnect/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501"]
per-file-ignores = { "tests/*" = ["S101", "S603", "S108", "F401", "I001", "S105", "F841", "B007", "C408", "F541", "B904", "E501"], "gate.py" = ["E402", "I001", "B008", "E501"], "graph.py" = ["E501"], "utils/personality.py" = ["S608"] }

[tool.ruff.lint.isort]
known-first-party = ["utils", "retrieval", "llm", "schemas", "sync", "agentic", "guardrails", "harness"]

[tool.mypy]
python_version = "3.12"
strict = true
